--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -87,7 +87,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Maps
 LastLevel=/Game/Maps/Grand_Cafeteria
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/StandardProjectile.StandardProjectile
 OpenAssetsAtExit=/Game/Blueprints/FireProjectile.FireProjectile
 OpenAssetsAtExit=/Game/Blueprints/IceProjectile.IceProjectile
@@ -103,7 +103,7 @@ OpenAssetsAtExit=/Game/Blueprints/TriggerBox_Blueprint.TriggerBox_Blueprint
 
 [RootWindow]
 ScreenPosition=X=220.000 Y=64.000
-WindowSize=X=1596.000 Y=924.000
+WindowSize=X=1606.000 Y=934.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -120,7 +120,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/Maps
+UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/denve/Documents/Github/CGT445/External Assets/Table export
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -1946,21 +1946,21 @@ TriggerBox.Collision=True
 [DetailPropertyExpansion]
 FoodProjectile_C=
 SphereComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
-ShapeComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-PrimitiveComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-SceneComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-ActorComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-Object="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+Object=
 FoodFightersChar_C=
 Character=
 Pawn=
 REINST_FoodFightersChar_C_205=Object.Actor.Tags
-SkeletalMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-SkinnedMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-MeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+SkeletalMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
+SkinnedMeshComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
+MeshComponent=
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
-FireProjectile_C="Object.Actor.Tags" 
-IceProjectile_C="Object.Actor.Tags" 
+FireProjectile_C=Object.Actor.Tags
+IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
 Widget=
@@ -1980,26 +1980,26 @@ K2Node_Switch=
 K2Node=
 EdGraphNode=
 StaticMesh=
-StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" "Object.Actor.Tags" 
+StaticMeshActor=
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
-StandardAmmoPickup_C="Object.Actor.Tags" 
+StandardAmmoPickup_C=Object.Actor.Tags
 StaticMeshComponent=
-CapsuleComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
-FireAmmoPickup_C="Object.Actor.Tags" 
-IceAmmoPickup_C="Object.Actor.Tags" 
+CapsuleComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]
+FireAmmoPickup_C=Object.Actor.Tags
+IceAmmoPickup_C=Object.Actor.Tags
 Font=Object.Font
 PauseMenu_C=
 EndGameScreen_C=
 FoodFightersGM_C=
 GameMode=
 Blueprint_CeilingLight_C="Object.Light.Color" 
-TriggerBox="Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.TriggerBase.CollisionComponent.Object.Tags.ComponentTags" 
-TriggerBase="Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.TriggerBase.CollisionComponent.Object.Tags.ComponentTags" 
-TriggerBox_Blueprint_C="Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.TriggerBase.CollisionComponent.Object.Tags.ComponentTags" 
-REINST_TriggerBox_Blueprint_C_308="Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.TriggerBase.CollisionComponent.Object.Tags.ComponentTags" 
-REINST_TriggerBox_Blueprint_C_318="Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.TriggerBase.CollisionComponent.Object.Tags.ComponentTags" 
+TriggerBox=
+TriggerBase=
+TriggerBox_Blueprint_C=
+REINST_TriggerBox_Blueprint_C_308=Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.TriggerBase.CollisionComponent.Object.Tags.ComponentTags
+REINST_TriggerBox_Blueprint_C_318=Object.TriggerBase.CollisionComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]" "Object.TriggerBase.CollisionComponent.Object.Tags.ComponentTags
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
