Made more counters

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ OpenAssetsAtExit=/Game/Blueprints/TriggerBox_Blueprint.TriggerBox_Blueprint
 
 [RootWindow]
 ScreenPosition=X=220.000 Y=64.000
-WindowSize=X=1606.000 Y=934.000
+WindowSize=X=1616.000 Y=944.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1846,7 +1846,7 @@ LastLogListing=LightingResults
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 InputSettings=InputSettings.Bindings.ActionMappings,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
-StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,
+StaticMeshActor=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,
 TriggerBox_Blueprint_C=
 
 [WidgetTemplatesExpanded]
@@ -1994,7 +1994,7 @@ PauseMenu_C=
 EndGameScreen_C=
 FoodFightersGM_C=
 GameMode=
-Blueprint_CeilingLight_C="Object.Light.Color" 
+Blueprint_CeilingLight_C=Object.Light.Color
 TriggerBox=
 TriggerBase=
 TriggerBox_Blueprint_C=
