tweak to ice move speed multi and removed a print statement. THIS IS THE FINAL BUILD OF THE GAME ANY CHANGES PAST THIS COMMIT WILL NOT MAKE IT INTO THE FINAL PRESENTATION. If an emergency change needs to occure please let me know

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,29 +81,19 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/Maps/Grand_Cafeteria
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/StandardProjectile.StandardProjectile
-OpenAssetsAtExit=/Game/Blueprints/FireProjectile.FireProjectile
-OpenAssetsAtExit=/Game/Blueprints/IceProjectile.IceProjectile
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
-OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
-OpenAssetsAtExit=/Game/UI/HUDP2.HUDP2
-OpenAssetsAtExit=/Game/UI/HUDP3.HUDP3
-OpenAssetsAtExit=/Game/UI/HUDP4.HUDP4
-OpenAssetsAtExit=/Game/Blueprints/StandardAmmoPickup.StandardAmmoPickup
-OpenAssetsAtExit=/Game/Blueprints/IceAmmoPickup.IceAmmoPickup
-OpenAssetsAtExit=/Game/Blueprints/FireAmmoPickup.FireAmmoPickup
-OpenAssetsAtExit=/Game/Blueprints/TriggerBox_Blueprint.TriggerBox_Blueprint
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
 
 [RootWindow]
 ScreenPosition=X=220.000 Y=64.000
-WindowSize=X=1616.000 Y=944.000
+WindowSize=X=1626.000 Y=954.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
